Big docs overhaul, docs reflect working functionality now
