# docs/parameters.go
@@ -1,37 +1,23 @@
 package docs
 
-import "github.com/BrandonReno/A.E.R/models"
-
 // The ID number of the workout to be deleted
 // swagger:parameters deleteWorkout updateWorkout getSingleWorkout
 type WorkoutIDParameterWrapper struct {
 	//	in: path
 	//	required: True
 	// 	example: 374638
-	ID int `json:"workout_id"`
+	Workout_id int `json:"workout_id"`
 }
 
 // The unique athlete ID which distinguishes athletes
-// swagger:parameters getSingleWorkout getAthlete deleteAthlete updateAthlete updateWorkout addWorkout deleteWorkout
+// swagger:parameters getSingleWorkout getAthlete deleteAthlete updateAthlete updateWorkout addWorkout deleteWorkout getSingleWorkout getEfficiency
 type AthleteIDParameterWrapper struct {
 	//	in:path
 	//	required: true
 	//	example:H3bfj78eHe
-	ID string `json:"athlete_id"`
+	Athlete_id string `json:"athlete_id"`
 }
 
-// The Workout parameters
-// swagger:parameters addWorkout updateWorkout
-type RequestWorkoutWrapper struct {
-	//	in: body
-	//	required: True
-	Body models.Workout
-}
 
-// The parameters to be filled out when creating an athlete
-// swagger:parameters addAthlete updateAthlete
-type RequestAthleteWrapper struct {
-	//	in: body
-	//	required: true
-	Body models.Athlete
-}
+
+
